AI notes completed
All topics of the AI coruse was added in the notes, some typos fixed.

Translated from "Sezione" to "Section" the text in the up-right corner of the notes

--- a/Robotics 1/LatexSourceFile/Robotics1.tex
+++ b/Robotics 1/LatexSourceFile/Robotics1.tex
@@ -52,7 +52,7 @@ This document summarizes and presents the topics for the \titolo course for the 
 %==================FOOTER e HEADER=======================%
 \fancyhf{}
 \fancyhead[L]{\nouppercase{\leftmark}}
-\fancyhead[R]{Sezione \thesection}
+\fancyhead[R]{Section \thesection}
 \fancyfoot[C]{\thepage}
 \fancyfoot[L]{\titolo}
 \fancyfoot[R]{ Marco Casu}
