--- a/preamble/preamble.tex
+++ b/preamble/preamble.tex
@@ -43,6 +43,7 @@
 \newcommand{\redText}[1]{\color{red}#1\color{black}}
 \newcommand{\sapText}[1]{\color{sapienza}#1\color{black}}
 \newcommand{\blueText}[1]{\color{blue}#1\color{black}}
+\newcommand{\greenText}[1]{\color{darkgreen}#1\color{black}}
 \newcommand{\code}[1]{\colorbox{light-gray}{\texttt{#1}}}
 \newcommand{\codee}[1]{\colorbox{white}{\texttt{#1}}}
 \newcommand{\K}{{\mathbb K}}
